--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "index.js",
   "dependencies": {
     "express": "^4.17.1",
+    "http": "0.0.0",
+    "https": "^1.0.0",
     "mongodb": "^3.3.3",
     "restify": "^8.4.0"
   },
