--- a/package.json
+++ b/package.json
@@ -5,14 +5,22 @@
   "main": "index.js",
   "dependencies": {
     "better-sqlite3": "^5.4.3",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "http": "0.0.0",
     "https": "^1.0.0",
     "mongodb": "^3.3.3"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "@types/dotenv": "^6.1.0",
+    "@types/node": "^12.11.7",
+    "chai": "^4.2.0",
+    "mocha": "^6.2.2"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc",
+    "start": "node src/index",
+    "test": "mocha"
   },
   "repository": {
     "type": "git",
