--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "http": "0.0.0",
-    "https": "^1.0.0",
-    "mongodb": "^3.3.3"
+    "https": "^1.0.0"
   },
   "devDependencies": {
     "@types/dotenv": "^6.1.0",
